# .-

./: README.md  bootstrap.sh  collect.sh  install.sh  pyproject.toml
config/dunst/: dunstrc
config/hypr/: custom  hyprland.conf  monitors.conf.bak.20260326071456  ricing  workspaces.conf.bak.20260326071456
config/hypr/custom/: execs.conf  keybinds.conf
config/hypr/custom/scripts/: sync-waybar.sh
config/hypr/hosts/: desktop.conf  laptop.conf
config/hypr/hyprland/: colors.conf  execs.conf  general.conf  keybinds.conf  rules.conf
config/hypr/hyprlock/: colors.conf
config/illogical-impulse/: config.json  installed_listfile
config/quickshell/ii/: settings.qml  shell.qml
config/quickshell/ii/modules/common/: Appearance.qml  Config.qml  Images.qml
config/quickshell/ii/modules/common/functions/: StringUtils.qml
config/quickshell/ii/modules/common/widgets/: ContentPage.qml  ContentSection.qml  ToolbarTextField.qml
config/quickshell/ii/modules/settings/: AiProvidersConfig.qml  BackgroundConfig.qml  BarConfig.qml  CustomizationConfig.qml  InterfaceConfig.qml  LauncherConfig.qml  MatugenConfig.qml  QuickConfig.qml  RicingConfig.qml
config/quickshell/ii/panelFamilies/: IllogicalImpulseFamily.qml
config/quickshell/ii/scripts/colors/: applycolor.sh  switchwall.sh  wallpaper-sample-color.sh
config/quickshell/ii/services/: Ai.qml  Wallpapers.qml
config/quickshell/ii/services/ai/: AiMessageData.qml  OpenAiApiStrategy.qml
config/quickshell/ii/translations/: en_US.json
config/waybar/: config  style.css
dotswitch/: __main__.py  cli.py  core.py
(+30 files in other folders)
